<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity"
    android:background="@color/colorAppBackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/about"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/BLACK" />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/BLACK"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/about_description_email"
            android:textColor="@color/colorO"
            android:textSize="12sp"
            android:layout_marginLeft="20dp" />
    </RelativeLayout>

</LinearLayout>