<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NamesActivity">

    <TextView
        android:id="@+id/text_view_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        android:text="@string/enter_your_name"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/BLACK"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_player1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/player_1"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/BLACK"/>

        <EditText
            android:id="@+id/edit_text_player1_name"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="55dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/player_1"
            android:maxLength="10"
            android:textColor="@color/BLACK"
            android:textStyle="italic"
            android:hint="@string/enter_your_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_player2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/player_2"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/BLACK"/>

        <EditText
            android:id="@+id/edit_text_player2_name"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/BLACK"
            android:text="@string/player_2"
            android:textStyle="italic"
            android:maxLength="10"
            android:layout_marginTop="55dp"
            android:hint="@string/enter_your_name"/>

    </LinearLayout>

    <Button
        android:id="@+id/start_game_btn"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/start_game"
        android:textColor="@color/BLACK"/>

</LinearLayout>